--- a/admin/index.html
+++ b/admin/index.html
@@ -4,7 +4,5 @@
     <title>Admin</title>
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
-  <body>
-    <!-- Decap CMS mounts automatically -->
-  </body>
+  <body></body>
 </html>
